--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     },
     "description": "Intuitive and Comprehensive M-PESA SDK for PHP Applications. Just Plug 'N Play",
     "license": "MIT",
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "name": "osenco/airtel",
     "readme": "README.md",
     "require": {
         "php": ">=7.4",
-        "guzzlehttp/guzzle": "7.4.x-dev"
+        "guzzlehttp/guzzle": "^7.4"
     },
     "support": {
         "email": "hi@osen.co.ke",
